--- a/src/package.json
+++ b/src/package.json
@@ -76,7 +76,7 @@
     "axios": "^0.19.2",
     "axios-retry": "^3.1.2",
     "babel-polyfill": "^6.26.0",
-    "bootstrap-sass": "^3.4.1",
+    "bootstrap": "^4.4.1",
     "classnames": "^2.2.6",
     "core-js": "^3.6.4",
     "fast-equals": "^2.0.0",
